--- a/src/app/features/catalog-slider/catalog-slider.component.html
+++ b/src/app/features/catalog-slider/catalog-slider.component.html
@@ -1,34 +1,14 @@
 <section class="Ca-slide-block" >
     <div class="catalog-swiper-container" dir="rtl">
-      <ul class="swiper-wrapper Ca-slide_list">
-        <li class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="0">
+      <ul class="swiper-wrapper Ca-slide_list" >
+        <li *ngFor="let catalog of companyDetails.products" class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="0">
           <!--data-swiper-autoplay -->
           <div class="Ca-slide-item-image-container shadow">
-           <img src=".././../assets/images/c1.jpg" class="Ca-slide_img" alt="">
+           <img [src]="baseUrl+catalog.image" class="Ca-slide_img" alt="">
           </div>
         </li>
        
-        <li class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="1">
-          <div class="Ca-slide-item-image-container shadow">
-            <img src=".././../assets/images/c2.jpg" class="Ca-slide_img" alt="">
-        </div>
-        </li>
-        
-        <li class="Ca-slide_item swiper-slide swiper-slide-prev" data-swiper-autoplay="1500" data-swiper-slide-index="2">
-        <div class="Ca-slide-item-image-container shadow">
-            <img src=".././../assets/images/c3.jpg" class="Ca-slide_img" alt="">
-        </div>
-        </li>
-        <li class="Ca-slide_item swiper-slide swiper-slide-active" data-swiper-autoplay="1500" data-swiper-slide-index="3">
-            <div class="Ca-slide-item-image-container shadow">
-                <img src=".././../assets/images/c1.jpg" class="Ca-slide_img" alt="">
-            </div>
-        </li>
-        <li class="Ca-slide_item swiper-slide swiper-slide-next" data-swiper-autoplay="1500" data-swiper-slide-index="4">
-            <div class="Ca-slide-item-image-container shadow">
-                <img src=".././../assets/images/c2.jpg" class="Ca-slide_img" alt="">
-            </div>
-        </li>
+      
      
       </ul>
     </div>
